# homo_geo_with_disturbance

./: LICENSE  readme.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/homo_msgs/: HomographyResult.h
devel/lib/homography_geometric_control/: homo_geo  homography_publish  offboard
devel/lib/mavros_interaction/: MavrosInteractionTest
devel/lib/pkgconfig/: homo_msgs.pc  homography_geometric_control.pc  mavros_interaction.pc  so3_control.pc  uav_state.pc
devel/lib/python2.7/dist-packages/homo_msgs/msg/: _HomographyResult.py  __init__.py
devel/share/common-lisp/ros/homo_msgs/msg/: HomographyResult.lisp  _package.lisp  _package_HomographyResult.lisp  homo_msgs-msg.asd
devel/share/gennodejs/ros/homo_msgs/msg/: HomographyResult.js  _index.js
devel/share/homo_msgs/cmake/: homo_msgs-msg-paths.cmake  homo_msgsConfig.cmake
devel/share/homography_geometric_control/cmake/: homography_geometric_controlConfig.cmake
devel/share/mavros_interaction/cmake/: mavros_interactionConfig.cmake
devel/share/roseus/ros/homo_msgs/: manifest.l
devel/share/roseus/ros/homo_msgs/msg/: HomographyResult.l
devel/share/so3_control/cmake/: so3_controlConfig.cmake
devel/share/uav_state/cmake/: uav_stateConfig.cmake
src/control/: readme.txt
src/control/mavros_interaction/: CMakeLists.txt
src/control/mavros_interaction/include/mavros_interaction/: MavrosInteraction.h
src/control/mavros_interaction/src/: MavrosInteraction.cpp  MavrosInteractionTest.cpp
src/control/so3_control/: CMakeLists.txt
src/control/so3_control/include/so3_control/: SO3Control.h
src/control/so3_control/src/: SO3Control.cpp
src/control/uav_state/: CMakeLists.txt  package.xml  readme.txt
src/control/uav_state/include/uav_state/: Common.h  UAVState.h
src/control/uav_state/src/: UAVState.cpp  test.cpp
src/homo_msgs/: CMakeLists.txt  package.xml
src/homo_msgs/msg/: HomographyResult.msg
src/homography_geometric_control/: CMakeLists.txt
src/homography_geometric_control/include/homography_geometric_control/: HomographyGeometricControl.h
src/homography_geometric_control/launch/: homography_geometric_control.launch  homography_pub.launch
src/homography_geometric_control/src/: HomographyGeometricControl.cpp
src/homography_geometric_control/test/: homo_geo.cpp  homography_publish.cpp  offboard.cpp
